Refactor: Change StepStatus from List<List<String>> to List<StepStatus> for better clarity